--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header .container-grid {
 h2 {
     font-family: "Anta";
     font-size: 28px;
-}0
+}
 
 #sobre p {
     font-size: 17px;
@@ -148,13 +148,13 @@ h2 {
     background-color: var(--roxo-gamifica);
 
     border-radius: 4px;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
+
 }
 
 .card img {
     height: 55%;
     width: 100%;
-
-    border-radius: 4px 4px 0px 0px;
 
 }
 
@@ -163,6 +163,8 @@ h2 {
 
     font-family: "Montserrat";
     font-size: 16px;
+
+    text-align: left;
 
     padding: 7%;
 }
@@ -186,9 +188,47 @@ h2 {
     cursor: pointer;
 
     transition: background-color 500ms ease;
-
 }
 
 .card button:hover {
     background-color: #ad4929;
+}
+
+#portifolio {
+    height: 250px;
+
+    background-image: url(./img/bonecos.png);
+    background-size: 250px;
+
+    background-attachment: fixed;
+
+    position: relative;
+}
+
+.filtro {
+    width: 100%;
+    height: 100%;
+
+    background-color: #47208bc2;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#portifolio .container-grid {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#portifolio a {
+    color: white;
+
+    font-family: "Anta";
+    font-size: 28px;
+
+    z-index: 1;
 }
