--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
 
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container-grid {
     width: 80vw;
     max-width: 1400px;
@@ -91,6 +95,44 @@ header .container-grid {
     font-family: "Anta";
     font-size: 32px;
 }
+
+.conteudo-banner span {
+    display: block;
+
+    overflow: hidden;
+
+    white-space: nowrap;
+
+    border-right: 5px solid var(--laranja-gamifica);
+
+    animation: 
+        digitando 2s steps(40, end), 
+        cursor 0.75s step-end infinite
+    ;
+}
+
+@keyframes digitando {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes cursor {
+    from, 
+    to {
+        border-color: transparent;
+    }
+
+    50% {
+        border-color: var(--laranja-gamifica);
+    }
+    
+}
+
 
 #sobre {
     height: 800px;
@@ -326,7 +368,100 @@ h2 {
     resize: none;
 }
 
-.campo label, .campo-descricao label {
+.campo label,
+.campo-descricao label {
     margin-bottom: 15px;
-
 }
+
+.campo input,
+.campo-descricao textarea {
+    font-family: "Montserrat";
+    font-size: 17px;
+}
+
+.campo input::placeholder,
+.campo-descricao textarea::placeholder {
+    color: #a0a0a0;
+}
+
+.campo input:focus,
+.campo-descricao textarea:focus {
+    outline: 2px solid var(--laranja-gamifica);
+}
+
+#contato form button {
+    height: 40px;
+    width: 60%;
+
+    background-color: var(--laranja-gamifica);
+    color: white;
+
+    border: none;
+    border-radius: 4px;
+
+    font-size: 17px;
+    font-family: "Montserrat";
+    font-weight: 700;
+    /* Bold */
+
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    transition: background-color 500ms;
+}
+
+#contato form button:hover {
+    background-color: #ad4929;
+}
+
+footer {
+    height: 290px;
+
+    background-color: var(--roxo-gamifica);
+}
+
+footer .container-grid {
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.redes-sociais {
+    height: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.redes-sociais p {
+    color: #fff;
+
+    font-family: "Anta";
+    font-size: 24px;
+}
+
+.icones-redes {
+    width: 240px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.icones-redes a {
+    color: white;
+}
+
+.icones-redes a:hover {
+    color: var(--laranja-gamifica);
+}
+
+/* Scroll nos links */
+/* Favicon */
+/* Animação do banner */
+
+/*Responsividade*/
