--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ header {
     height: 165px;
 }
 
+header button {
+    display: none;
+}
+
 header img {
     width: 234px;
 }
@@ -105,10 +109,9 @@ header .container-grid {
 
     border-right: 5px solid var(--laranja-gamifica);
 
-    animation: 
-        digitando 2s steps(40, end), 
-        cursor 0.75s step-end infinite
-    ;
+    animation:
+        digitando 2s steps(40, end),
+        cursor 0.75s step-end infinite;
 }
 
 @keyframes digitando {
@@ -122,7 +125,8 @@ header .container-grid {
 }
 
 @keyframes cursor {
-    from, 
+
+    from,
     to {
         border-color: transparent;
     }
@@ -130,7 +134,7 @@ header .container-grid {
     50% {
         border-color: var(--laranja-gamifica);
     }
-    
+
 }
 
 
@@ -465,3 +469,59 @@ footer .container-grid {
 /* Animação do banner */
 
 /*Responsividade*/
+
+@media screen and (max-width: 1300px) {
+    header {
+        position: relative;
+    }
+
+    header button {
+        width: 50px;
+
+        display: unset;
+
+        background: none;
+        border: none;
+    }
+
+    header svg {
+        fill: white;
+    }
+
+
+
+    nav.menu {
+        height: 500px;
+        width: 350px;
+
+        padding: 0px 30px;
+
+
+        flex-direction: column;
+        justify-content: space-around;
+
+        background-color: #000000da;
+
+        position: absolute;
+        top: 165px;
+        right: 0px;
+
+    }
+
+    #sobre {
+        padding: 100px 15%;
+    }
+
+    .card {
+        height: 320px;
+        width: 200px;
+    }
+
+    #contato form {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    
+}
