feat: JavaScript iniciado

--- a/style.css
+++ b/style.css
@@ -470,6 +470,10 @@ footer .container-grid {
 
 /*Responsividade*/
 
+.menu-fechado {
+    display: none;
+}
+
 @media screen and (max-width: 1300px) {
     header {
         position: relative;
