--- a/style.css
+++ b/style.css
@@ -49,14 +49,15 @@ html {
 }
 
 .segundo-banner {
-    background-image: linear-gradient(90deg, rgba(24, 104, 36, 1) 0%, rgba( 24, 104, 36, 0.8) 100%), url(img/bg-room.png);
+    background-image: linear-gradient(90deg, rgba(24, 104, 36, 1) 0%, rgba(24, 104, 36, 0.8) 100%), url(img/bg-room.png);
 }
 
-.terceiro-banner{
+.terceiro-banner {
     background-image: linear-gradient(90deg, rgba(104, 24, 48, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
 }
 
-#botao-voltar, #botao-proximo {
+#botao-voltar,
+#botao-proximo {
     width: 30px;
 
     background: none;
@@ -67,7 +68,8 @@ html {
     position: absolute;
 }
 
-#botao-voltar svg, #botao-proximo svg {
+#botao-voltar svg,
+#botao-proximo svg {
     fill: #ffffff76;
 }
 
@@ -79,7 +81,36 @@ html {
     right: 4%;
 }
 
+.botoes {
+    width: 150px;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    position: absolute;
+    bottom: 4%;
+
+    /* Centralizar usando position
+    Adicionar left 50%
+    Usar fun;áo cal() para substrair metade da largura do elemento Ex: 75px */
+
+    left: calc(50% - 75px);
+}
+
+.botoes button {
+    width: 30px;
+
+    display: unset;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.botoes button svg {
+    fill: #ffffff76;
+}
 
 header {
     height: 165px;
